# chimera

./: .gitignore  Makefile  README.md  REUSE.toml  flake.nix
.github/workflows/: release.yml  verification.yml
bench/common/: bench.h  crt0.s  link.ld  runtime.c
doc/: axilite.md  boot_interrupts.md  debug.md  formal.md  metrics.md  microarchitecture.md
formal/: lower.sh  run_bmc.sh
isa/: decode_dispatch_golden.csv  h8300_base_cases.yaml  h8300_legacy_cases.yaml
nix/: zaozi-extra-lock.nix
rtl/: build.sh
rtl/src/: Alu.scala  AxiLiteBridge.scala  BcdAdjust.scala  BitOperand.scala  Biu.scala  BranchCond.scala  Ccr.scala  ChimeraDefs.scala  ChimeraParameter.scala  CoarseDecoder.scala  Core.scala  CoreAluControl.scala  CoreBitControl.scala  CoreCcrControl.scala  CoreImmediates.scala  CoreIrqControl.scala  CorePredicates.scala  CoreReadSelect.scala  CoreTop.scala  CoreTopAxi.scala  CoreWriteback.scala  DebugPort.scala  DivAssist.scala  H8RegFile.scala  IntRegFile.scala  JtagDtm.scala  MicroDecode.scala  (+6 more)
sail/: h8300.sail  h8300.sail_project  prelude.sail
scripts/: check_bench_coremark.py  check_bench_dhry.py  check_decode_dispatch.py  check_exec_sail.py  check_gcc_footprint.py  check_gdb_oracle.py  check_gnu_oracle.py  check_isa_cases.py  check_sail_coverage.py  check_sail_model.py  run_gdb_e2e.sh
tools/jtag2gdb/: Cargo.toml
tools/jtag2gdb/examples/: rtt_target.c  sim_bp.rs  sim_ccr.rs  sim_diag.rs  sim_smoke.rs
tools/jtag2gdb/src/: backend.rs  dm_h8.rs  dtm.rs  ft232_mpsse.rs  jtag_tap.rs  lib.rs  main.rs  rsp_server.rs  rtt.rs  sim_socket.rs
(+88 files in other folders)
